# dxf2geo

./: .gitignore  CITATION.cff  Makefile  README.md  env.yml  pyproject.toml  pytest.ini
.github/workflows/: clean_code.yml  publish.yml  test.yml
src/dxf2geo/: extract.py  visualise.py
tests/: README_TESTS.md  conftest.py  test_empty_and_logging.py  test_extract.py  test_extract_basic.py  test_filters_geometry_metrics.py  test_filters_layers_bbox.py  test_filters_patterns_priority.py  test_geometry_types_arg.py  test_placeholder.py  test_visualise.py
